API in place, now just add it where I need it. Also fix some css
Price is not showing on product cards (store page).
Need to render specific game on product  page and checkout + thankyou

--- a/htmlcssactual/Simen-Magnussen_HTML-CSS-CA/css/_store-page.css
+++ b/htmlcssactual/Simen-Magnussen_HTML-CSS-CA/css/_store-page.css
@@ -61,21 +61,24 @@ figure {
     flex-shrink: 1;
 }
 
+.cardGameTitle {
+    text-align: center;
+}
+
 .card-details {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-shrink: 1;
 }
 
 .card-images {
-display: grid;
-grid-template-columns: 1fr 1fr;
-gap: 10px;
-object-fit: cover;
-object-position: center;
-
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    object-fit: cover;
+    object-position: center;
 }
 
 .card-price {
